infrastructure: add clang-format configuration and command
Added clang-format configuration from Zephyr and configures VSCode for it.
Additionally, a west command is added to run clang-format on all files of
an application.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Zephyr directories
-bootloader
-modules
-tools
-zephyr
+/bootloader
+/modules
+/tools
+/zephyr
 
 # build directory
 build
+
+# Python cache
+__pycache__
