--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,7 @@ jobs:
       - name: Build application
         shell: bash
         run: west build -b nucleo_g474re applications/example --build-dir build/nucleo_g474re/example
+
+      - name: Check coding style
+        shell: bash
+        run: west clang-format applications/example
