bootloader: add bootloader to the firmware build
A Zephyr sysbuild with the MCUboot bootloader is configured.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,15 @@
     "C/C++ Include Guard.Path Skip": 3,
     "C/C++ Include Guard.Remove Extension": false,
     "cSpell.words": [
+        "CTLR",
+        "CBPRINTF",
+        "ENCTLV",
+        "LIBC",
+        "mbed",
+        "mbedtls",
+        "MCUBOOT",
+        "Sysbuild",
+        "tinycrypt",
         "zephyrproject",
     ],
     "C_Cpp.default.compileCommands": "build/nucleo_g474re/example/compile_commands.json",
