infrastructure: add clang-format configuration and command
Added clang-format configuration from Zephyr and configures VSCode for it.
Additionally, a west command is added to run clang-format on all files of
an application.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,7 @@ jobs:
       - name: Build application
         shell: bash
         run: west build -b nucleo_g474re application --build-dir build/nucleo_g474re
+
+      - name: Check coding style
+        shell: bash
+        run: west clang-format
