--- a/application/west.yml
+++ b/application/west.yml
@@ -5,6 +5,7 @@ manifest:
   self:
     # The self subsection can be used to control the manifest repository itself.
     path: application
+    west-commands: scripts/west-commands.yml
 
   remotes:
   - name: zephyrproject-rtos
