application: use c++ for the application
Configure the application to enable C++ and changes main file to be
compiled by the C++ compiler.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -4,4 +4,4 @@ project(example)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE src/main.cpp)
