application: add example code for storage of protobuf files
Adds example code for a non-volatile storage to store protobuf files. In
addition, the usage of system_error is shown and an adapted implementation
of std::system_error is added, that does not use dynamic memory.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,21 @@
     "C/C++ Include Guard.Path Skip": 3,
     "C/C++ Include Guard.Remove Extension": false,
     "cSpell.words": [
+        "autoremove",
+        "ccache",
+        "eabi",
+        "gperf",
         "gpios",
+        "grpcio",
+        "LIBCPP",
+        "libmagic",
+        "libsdl",
+        "multilib",
+        "NANOPB",
+        "noninteractive",
         "pycache",
+        "setuptools",
+        "venv",
         "zephyrproject"
     ],
     "C_Cpp.default.compileCommands": "build/nucleo_g474re/compile_commands.json",
