--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -1,7 +1,10 @@
-cmake_minimum_required(VERSION 3.22.0)
+cmake_minimum_required(VERSION 3.25.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(example)
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# Include NanoPB and add the protocol buffers definition.
+list(APPEND CMAKE_MODULE_PATH ${ZEPHYR_BASE}/modules/nanopb)
+include(nanopb)
+zephyr_nanopb_sources(app protobuf/storage.proto)
 
-target_sources(app PRIVATE src/main.cpp)
+add_subdirectory(src)
