--- a/application/prj.conf
+++ b/application/prj.conf
@@ -1,3 +1,15 @@
-CONFIG_CPP=y
+# general Zephyr configuration
 CONFIG_GPIO=y
 CONFIG_LOG=y
+CONFIG_NANOPB=y
+
+# C++ configuration
+CONFIG_CPP=y
+CONFIG_REQUIRES_FULL_LIBCPP=y
+CONFIG_STD_CPP2B=y
+
+# configuration of the non-volatile storage (flash storage)
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_NVS=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
