--- a/application/prj.conf
+++ b/application/prj.conf
@@ -6,7 +6,7 @@ CONFIG_NANOPB=y
 # C++ configuration
 CONFIG_CPP=y
 CONFIG_REQUIRES_FULL_LIBCPP=y
-CONFIG_STD_CPP2B=y
+CONFIG_STD_CPP2B=y # can be changed to CPP23 when it is available in Zephyr
 
 # configuration of the non-volatile storage (flash storage)
 CONFIG_FLASH=y
