infrastructure: integrate unit and integration test execution
Added example unit test and example integration test and execute them via
VSCode and the Github workflow. There are also launch configurations added
to debug those tests.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     - cron: "15 5 * * *"
 
 jobs:
-  build:
+  BuildAndTest:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/awinterstein/zephyr-build:main
@@ -30,9 +30,9 @@ jobs:
         shell: bash
         run: west clang-format
 
-      - name: Build and run unit tests
+      - name: Build and run tests
         shell: bash
-        run: west twister -p unit_testing -T application/tests/ -O build/twister --coverage -c
+        run: west twister -T application/tests/ -O build/twister -c
 
       - name: Publish test results in Github
         uses: EnricoMi/publish-unit-test-result-action@v2
