application: system error based on llvm implementation
Implemented system error without dynamic memory based on the implementation
from LLVM instead of the GCC implementation.

Signed-off-by: Adrian Winterstein <adrian@winterstein.biz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "gpios",
         "grpcio",
         "LIBCPP",
+        "libcxx",
         "libmagic",
         "libsdl",
         "multilib",
