--- a/application/src/CMakeLists.txt
+++ b/application/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(
   app
   PRIVATE main.cpp storage/non_volatile_storage.cpp protobuf/protobuf_error.cpp
-          protobuf/protobuf_message.cpp util/system_error.cpp)
+          protobuf/protobuf_message.cpp util/system_error.cpp util/system_error/error_category.cpp)
 
 target_include_directories(app PRIVATE ${CMAKE_CURRENT_LIST_DIR})
